--- a/public/test.html
+++ b/public/test.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-      <script src="javascripts/jquery.js" type="text/javascript"></script>
-      <script src="javascripts/jcanvas.js" type="text/javascript"></script>
-      <script src="javascripts/canvas-tempates.js" type="text/javascript"></script>
-    </head>
-    <body>
-    <canvas id="bmc" width="800" height="600" style="border:4px solid black;" ></canvas>
-<!--
+<head>
+  <meta charset="utf-8" />
+  <title></title>
+  <script src="javascripts/jquery.js" type="text/javascript"></script>
+  <script src="javascripts/jcanvas.js" type="text/javascript"></script>
+  <script src="javascripts/canvas-templates.js" type="text/javascript"></script>
+  <script src="javascripts/jquery.roundabout.js" type="text/javascript"></script>
+  <style type="text/css">
+    body { background-color:#6595e5;}
+    
+    .canvas-menu { width: 800px; margin: 0 auto;}
+    
+    ul {
+				list-style: none;
+				padding: 0;
+				margin: 0 auto;
+				width: 42em;
+				height: 24em;
+			}
+			li {
+				height: 20em;
+				width: 30em;
+				text-align: center;
+				cursor: pointer;
+			}
+			li img { width:100%; height:100%;}
+  </style>
+</head>
+<body>
+  <!--    <canvas id="bmc" width="800" height="600" style="border:4px solid black;" ></canvas>
+
     <div id="canvas" style="border:4px solid black; width:800px; height: 600px;">
     </div>-->
-<script type="text/javascript">
+  <div class="canvas-menu">
+    <ul class="roundabout">
+      <li class="well">
+        <img alt="" src="images/canvas_bmg.png" /></li>
+      <li class="well">
+        <img alt="" src="images/canvas_bmy.png" /></li>
+      <li class="well">
+        <img alt="" src="images/canvas_empty.png" /></li>
+    </ul>
+  </div>
+  <script type="text/javascript">
+    $('.roundabout').roundabout();
+    //  var canvas = $("#bmc");
 
-  var canvas = $("#bmc");
-
-  RenderCanvas("PBMC", canvas);
+    //  RenderCanvas("PBMC", canvas);
 
 
-</script>
-    </body>
+  </script>
+</body>
 </html>
